src/test/ui/access-mode-in-closures.nll.stderr
error[E0507]: cannot move out of borrowed content
  --> $DIR/access-mode-in-closures.rs:8:15
   |
LL |         match *s { S(v) => v }
   |               ^^     - data moved here
   |               |
   |               cannot move out of borrowed content
   |               help: consider removing the `*`: `s`
   |
note: move occurs because `v` has type `std::vec::Vec<isize>`, which does not implement the `Copy` trait
  --> $DIR/access-mode-in-closures.rs:8:22
   |
LL |         match *s { S(v) => v }
   |                      ^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0507`.
